--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   box-sizing: border-box;
 }
 
-html{
+html {
   background-color: #0f1729 !important;
 }
 
@@ -15,6 +15,7 @@ body {
   background-color: white;
   font-family: 'Chelsea Market', cursive;
 }
+
 
 .abs,
 h2:after,
@@ -172,61 +173,62 @@ h2 {
 }
 
 
-/* From uiverse.io by @G4b413l */
-.dot-wave {
-  --uib-size: 50px;
-  --uib-speed: 0.6s;
-  --uib-color: #0d0909;
+colgroup {
+  color: #00000066;
+}
+
+
+/* From uiverse.io by @gagan-gv */
+.spinner {
+  height: 50px;
+  width: max-content;
+  font-size: 18px;
+  font-weight: 600;
+  font-family: monospace;
+  letter-spacing: 1em;
+  color: #f5f5f5;
+  filter: drop-shadow(0 0 10px);
   display: flex;
-  flex-flow: row nowrap;
+  justify-content: center;
   align-items: center;
-  justify-content: space-between;
-  width: var(--uib-size);
-  height: calc(var(--uib-size) * 0.17);
-  padding-top: calc(var(--uib-size) * 0.34);
 }
 
-.dot-wave__dot {
-  flex-shrink: 0;
-  width: calc(var(--uib-size) * 0.17);
-  height: calc(var(--uib-size) * 0.17);
-  border-radius: 50%;
-  background-color: var(--uib-color);
-  will-change: transform;
+.spinner span {
+  animation: loading6454 1.75s ease infinite;
 }
 
-.dot-wave__dot:nth-child(1) {
-  animation: jump824 var(--uib-speed) ease-in-out
-    calc(var(--uib-speed) * -0.45) infinite;
+.spinner span:nth-child(2) {
+  animation-delay: 0.25s;
 }
 
-.dot-wave__dot:nth-child(2) {
-  animation: jump824 var(--uib-speed) ease-in-out
-    calc(var(--uib-speed) * -0.3) infinite;
+.spinner span:nth-child(3) {
+  animation-delay: 0.5s;
 }
 
-.dot-wave__dot:nth-child(3) {
-  animation: jump824 var(--uib-speed) ease-in-out
-    calc(var(--uib-speed) * -0.15) infinite;
+.spinner span:nth-child(4) {
+  animation-delay: 0.75s;
 }
 
-.dot-wave__dot:nth-child(4) {
-  animation: jump824 var(--uib-speed) ease-in-out infinite;
+.spinner span:nth-child(5) {
+  animation-delay: 1s;
 }
 
-@keyframes jump824 {
+.spinner span:nth-child(6) {
+  animation-delay: 1.25s;
+}
+
+.spinner span:nth-child(7) {
+  animation-delay: 1.5s;
+}
+
+@keyframes loading6454 {
+
   0%,
   100% {
-    transform: translateY(0px);
+    transform: translateY(0);
   }
 
   50% {
-    transform: translateY(-200%);
+    transform: translateY(-10px);
   }
-}
-
-
-
-colgroup{
-  color: #00000066;
 }
