--- a/src/App.css
+++ b/src/App.css
@@ -7,20 +7,12 @@
   box-sizing: border-box;
 }
 
+.App{
+  background: url('./img/alienFondo.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 
-
-#video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.contaner{
-  position: relative;
-  z-index: 100;
 }
 
 
@@ -33,6 +25,9 @@ body {
   border-radius: 37px 37px 37px 37px;
   -moz-border-radius: 37px 37px 37px 37px;
   -webkit-border-radius: 37px 37px 37px 37px;
+  box-shadow: 2px 2px 30px #000;
+  background-color: rgba(0, 0, 0, 0.089);
+
   transition: 300ms ease-in-out;
 }
 
@@ -46,6 +41,12 @@ body {
   -moz-border-radius: 200px 70px 70px 200px;
   -webkit-border-radius: 200px 70px 70px 200px;
   transition: 300ms ease-in-out;
+  box-shadow: 2px 2px 30px #000;
+  background-color: rgba(0, 0, 0, 0.089);
+}
+
+.textShadow{
+  text-shadow: 0px 0px 3px #000;
 }
 
 .cardetail {
